--- a/app/src/main/res/menu/cab_checklist.xml
+++ b/app/src/main/res/menu/cab_checklist.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/cab_move_to_top"
         android:icon="@drawable/ic_move_to_top_vector"
         android:title="@string/move_to_top"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always" />
     <item
         android:id="@+id/cab_move_to_bottom"
         android:icon="@drawable/ic_move_to_bottom_vector"
         android:title="@string/move_to_bottom"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always" />
     <item
         android:id="@+id/cab_rename"
         android:icon="@drawable/ic_rename_new"
         android:title="@string/rename"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always" />
     <item
         android:id="@+id/cab_delete"
         android:icon="@drawable/ic_delete_vector"
         android:title="@string/delete"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom" />
 </menu>
