--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -244,6 +244,29 @@
 
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/settings_add_checklist_top_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:background="?attr/selectableItemBackground"
+            android:paddingStart="@dimen/normal_margin"
+            android:paddingTop="@dimen/activity_margin"
+            android:paddingEnd="@dimen/normal_margin"
+            android:paddingBottom="@dimen/activity_margin">
+
+            <com.simplemobiletools.commons.views.MySwitchCompat
+                android:id="@+id/settings_add_checklist_top"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:clickable="false"
+                android:paddingStart="@dimen/medium_margin"
+                android:text="@string/add_new_checklist_items_top"
+                app:switchPadding="@dimen/medium_margin" />
+
+        </RelativeLayout>
+
         <com.simplemobiletools.commons.views.MyTextView
             android:id="@+id/startup_label"
             android:layout_width="wrap_content"
