Dynamically add checklist items

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,4 @@
 <resources>
     <dimen name="checklist_image_size">56dp</dimen>
+    <dimen name="checklist_delete_size">36dp</dimen>
 </resources>
