--- a/app/src/main/res/layout/dialog_new_checklist_item.xml
+++ b/app/src/main/res/layout/dialog_new_checklist_item.xml
@@ -1,41 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/dialog_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:orientation="vertical"
     android:paddingStart="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
     android:paddingEnd="@dimen/activity_margin">
 
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/checklist_item_title_1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/medium_margin"
-        android:inputType="textCapSentences"
-        android:maxLength="500"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        android:orientation="vertical">
 
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/checklist_item_title_2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/medium_margin"
-        android:inputType="textCapSentences"
-        android:maxLength="500"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        <LinearLayout
+            android:id="@+id/checklist_holder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
 
-    <com.simplemobiletools.commons.views.MyEditText
-        android:id="@+id/checklist_item_title_3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/medium_margin"
-        android:inputType="textCapSentences"
-        android:maxLength="500"
-        android:textCursorDrawable="@null"
-        android:textSize="@dimen/normal_text_size" />
+        <com.simplemobiletools.commons.views.MyTextView
+            android:id="@+id/add_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:background="?selectableItemBackground"
+            android:drawableStart="@drawable/ic_plus_vector"
+            android:drawablePadding="@dimen/small_margin"
+            android:gravity="center_vertical"
+            android:padding="@dimen/small_margin"
+            android:text="@string/add_new_checklist_item" />
 
-</LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
