Added monospaced font to widgets (#292)

--- a/app/src/main/res/layout/widget_text_layout.xml
+++ b/app/src/main/res/layout/widget_text_layout.xml
@@ -31,4 +31,34 @@
         android:padding="@dimen/small_margin"
         android:visibility="gone" />
 
+    <TextView
+        android:id="@+id/widget_text_left_monospace"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:gravity="start"
+        android:fontFamily="monospace"
+        android:padding="@dimen/small_margin"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/widget_text_center_monospace"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:gravity="center_horizontal"
+        android:fontFamily="monospace"
+        android:padding="@dimen/small_margin"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/widget_text_right_monospace"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@null"
+        android:gravity="end"
+        android:fontFamily="monospace"
+        android:padding="@dimen/small_margin"
+        android:visibility="gone" />
+
 </RelativeLayout>
