adding some plus signs at IDs

--- a/app/src/main/res/layout/widget_config.xml
+++ b/app/src/main/res/layout/widget_config.xml
@@ -72,7 +72,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/config_bg_color"
-        android:layout_below="@id/text_note_view_title"
+        android:layout_below="@+id/text_note_view_title"
         android:layout_marginBottom="@dimen/activity_margin"
         android:background="@null"
         android:gravity="top"
@@ -84,7 +84,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/config_bg_color"
-        android:layout_below="@id/text_note_view_title"
+        android:layout_below="@+id/text_note_view_title"
         android:layout_marginBottom="@dimen/activity_margin"
         android:clipToPadding="false"
         android:overScrollMode="never"
