--- a/app/src/main/res/layout/dialog_new_checklist_item.xml
+++ b/app/src/main/res/layout/dialog_new_checklist_item.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:orientation="vertical"
     android:paddingStart="@dimen/activity_margin"
     android:paddingTop="@dimen/activity_margin"
     android:paddingEnd="@dimen/activity_margin">
@@ -20,17 +19,18 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
 
-        <com.simplemobiletools.commons.views.MyTextView
+        <ImageView
             android:id="@+id/add_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_margin"
-            android:background="?selectableItemBackground"
-            android:drawableStart="@drawable/ic_plus_vector"
-            android:drawablePadding="@dimen/small_margin"
-            android:gravity="center_vertical"
-            android:padding="@dimen/small_margin"
-            android:text="@string/add_new_checklist_item" />
+            android:layout_marginBottom="@dimen/medium_margin"
+            android:background="@drawable/button_background"
+            android:paddingStart="@dimen/activity_margin"
+            android:paddingTop="@dimen/medium_margin"
+            android:paddingEnd="@dimen/activity_margin"
+            android:paddingBottom="@dimen/medium_margin"
+            android:src="@drawable/ic_plus_vector" />
 
     </LinearLayout>
 
