--- a/app/src/main/res/menu/cab_checklist.xml
+++ b/app/src/main/res/menu/cab_checklist.xml
@@ -13,7 +13,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/cab_rename"
-        android:icon="@drawable/ic_rename_new"
+        android:icon="@drawable/ic_rename_vector"
         android:title="@string/rename"
         app:showAsAction="always" />
     <item
