--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -33,7 +33,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/rename_note"
-        android:icon="@drawable/ic_rename_new"
+        android:icon="@drawable/ic_rename_vector"
         android:title="@string/rename_note"
         app:showAsAction="ifRoom" />
     <item
@@ -86,10 +86,12 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/settings"
+        android:icon="@drawable/ic_settings_cog_vector"
         android:title="@string/settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/about"
+        android:icon="@drawable/ic_info_vector"
         android:title="@string/about"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
