replace the widget config screens Switch with a Checkbox

--- a/app/src/main/res/layout/widget_config.xml
+++ b/app/src/main/res/layout/widget_config.xml
@@ -11,7 +11,6 @@
         android:id="@+id/notes_picker_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="@dimen/activity_margin"
         android:paddingBottom="@dimen/activity_margin">
 
         <RelativeLayout
@@ -19,16 +18,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
-            android:paddingTop="@dimen/activity_margin"
-            android:paddingEnd="@dimen/activity_margin"
-            android:paddingBottom="@dimen/activity_margin">
+            android:padding="@dimen/activity_margin">
 
-            <com.simplemobiletools.commons.views.MySwitchCompat
+            <com.simplemobiletools.commons.views.MyAppCompatCheckbox
                 android:id="@+id/show_note_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:clickable="false"
+                android:layoutDirection="rtl"
                 android:text="@string/show_note_title"
                 app:switchPadding="@dimen/medium_margin" />
 
@@ -41,6 +39,7 @@
             android:layout_below="@+id/show_note_title_holder"
             android:layout_marginTop="@dimen/medium_margin"
             android:layout_marginBottom="@dimen/normal_margin"
+            android:paddingStart="@dimen/activity_margin"
             android:text="@string/note_shown_widget" />
 
         <com.simplemobiletools.commons.views.MyTextView
@@ -48,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/notes_picker_label"
+            android:layout_marginStart="@dimen/activity_margin"
             android:background="@drawable/button_background"
             android:padding="@dimen/normal_margin"
             android:text="@string/general_note" />
