--- a/app/src/main/res/layout/dialog_delete_note.xml
+++ b/app/src/main/res/layout/dialog_delete_note.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/delete_note_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -9,21 +10,30 @@
         android:id="@+id/delete_note_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/small_margin"
+        android:layout_marginTop="@dimen/medium_margin"
         android:padding="@dimen/activity_margin"
-        android:textSize="@dimen/bigger_text_size" />
+        android:textSize="@dimen/bigger_text_size"
+        tools:text="@string/delete_note_prompt_message" />
 
-    <com.simplemobiletools.commons.views.MyAppCompatCheckbox
-        android:id="@+id/delete_note_checkbox"
+    <RelativeLayout
+        android:id="@+id/delete_note_checkbox_holder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_margin"
-        android:layout_marginEnd="@dimen/activity_margin"
-        android:checked="false"
-        android:paddingStart="@dimen/activity_margin"
-        android:paddingTop="@dimen/small_margin"
-        android:paddingEnd="@dimen/activity_margin"
-        android:paddingBottom="@dimen/small_margin"
-        android:text="@string/delete_file_itself"
-        android:visibility="gone" />
+        android:background="?attr/selectableItemBackground"
+        android:padding="@dimen/activity_margin"
+        android:visibility="gone">
 
+        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
+            android:id="@+id/delete_note_checkbox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/small_margin"
+            android:background="@null"
+            android:checked="false"
+            android:clickable="false"
+            android:layoutDirection="rtl"
+            android:text="@string/delete_file_itself" />
+
+    </RelativeLayout>
 </LinearLayout>
