--- a/app/src/main/res/layout/dialog_sort_checklist.xml
+++ b/app/src/main/res/layout/dialog_sort_checklist.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialog_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -91,8 +90,7 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:clickable="false"
-            android:text="@string/move_done_checklist_items"
-            app:switchPadding="@dimen/medium_margin" />
+            android:text="@string/move_done_checklist_items" />
 
     </RelativeLayout>
 </LinearLayout>
