Added padding for checklist to avoid hiding the last item (#443)

--- a/app/src/main/res/layout/fragment_checklist.xml
+++ b/app/src/main/res/layout/fragment_checklist.xml
@@ -60,6 +60,7 @@
                 android:clipToPadding="false"
                 android:overScrollMode="never"
                 android:visibility="gone"
+                android:paddingBottom="@dimen/secondary_fab_bottom_margin"
                 app:layoutManager="com.simplemobiletools.commons.views.MyLinearLayoutManager" />
 
             <com.simplemobiletools.commons.views.MyTextView
